Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.0.0 Beta 2
-
Fix Version/s: 5.0.0 RC 1
-
Component/s: Documentation
-
Labels:None
-
Commits:c0e412c570d127c0314db2d4f1114189aa41a381
Description
For example the following annotated list contains internal classes such as QMacStyle, QWindowsVistaStyle and QWindowsXPStyle: http://doc-snapshot.qt-project.org/5.0/qtwidgets/style-reference.html#classes-for-widget-styling